# Video_Data_Processing

./: .gitignore  LICENSE  README.md  download_models.py  download_sharepoint_videos.py  download_sharepoint_videos_alt.py  download_videos.py  pyproject.toml  requirements.txt  run_all.ps1  run_all.sh  run_download.ps1  run_download.sh  run_download_models.ps1  run_download_models.sh  run_download_videos.sh  run_emotion_recognition.ps1  run_emotion_recognition.sh  run_pipeline.ps1  run_pipeline.sh  run_separate_speech.ps1  run_separate_speech.sh  run_speech_to_text.ps1  run_speech_to_text.sh  test_feature_extraction.py
archive/models/download_models/: __init__.py
docs/: macos_instructions.md  macos_linux_instructions.md  speaker_diarization.md  windows_instructions.md
download_videos/: __main__.py  browser.py  download.py  main.py  utils.py
models/: fetch_models.py  models_reference_list.csv  reference_list_pre_trained_model.csv
scripts/: download_models.py  fix_speaker_order.py  test_audio_features.py
scripts/macos/: download_video_models.sh  extract_audio_features.sh  extract_multimodal_features.sh  extract_video_features.sh  install_models.sh  run_download_videos.sh  run_emotion_and_pose_recognition.sh  run_emotion_recognition.sh  run_feature_extraction.sh  run_separate_speech.sh  run_speech_to_text.sh
scripts/windows/: run_download_videos.ps1  run_emotion_and_pose_recognition.ps1  run_emotion_recognition.ps1  run_separate_speech.ps1  run_speech_to_text.ps1
src/: download_models.py  emotion_recognition_main.py  separate_speech.py
src/body_pose/: __init__.py  utils.py
src/download_models/: __init__.py  __main__.py  main.py  parsers.py  sources.py  utils.py
src/download_videos/: __init__.py  __main__.py  download.py  interface.py  main.py  sharepoint.py  utils.py
src/emotion_and_pose_recognition/: __init__.py  cli.py  feature_extractor.py  multimodal_features.py  processor.py  utils.py  video_features.py
src/emotion_and_pose_recognition/body_pose/: estimator.py  utils.py
src/emotion_and_pose_recognition/models/: __init__.py  model_downloader.py  pare_model.py
src/emotion_recognition/: __init__.py  cli.py  detector.py  interface.py  processor.py  utils.py
src/install_github_models/: install_github_models.py
src/output_features/: __init__.py  main.py  utils.py
src/output_features/extractors/: __init__.py  audio_basic.py  spectral_features.py  speech_emotion.py  speech_transcription.py
src/separate_speech/: __init__.py  __main__.py  audio_io.py  diarization.py  extraction.py  interface.py  interface_extended.py  main.py  processor.py  separation.py  utils.py
src/speech_to_text/: __init__.py  __main__.py  diarization.py  main.py  speech_features.py  transcription.py  utils.py
src/utils/: merge_features.py
utils/: __init__.py  colored_logging.py  init_logging.py  json_utils.py  merge_features.py
