[tool.poetry]
name = "video-data-processing"
version = "0.1.0"
description = "Video processing toolkit for emotion recognition and speech analysis"
authors = ["Kenneth Dao - daotrongkhanh@u.nus.edu"]
readme = "README.md"
packages = [{include = "src"}]  # Specify the source directory

[tool.poetry.dependencies]
python = ">=3.10"
requests = ">=2.28.1"
typer = ">=0.9.0"
colorama = ">=0.4.6"
setuptools = ">=65.0.0"
wheel = ">=0.38.0"
gitpython = ">=3.1.30"  # For downloading models

# Group common dependencies without numpy conflicts
[tool.poetry.group.common]
optional = true

[tool.poetry.group.common.dependencies]
moviepy = ">=1.0.3"
pydub = ">=0.25.1"
ffmpeg-python = ">=0.2.0"

# Emotion recognition dependencies
[tool.poetry.group.emotion]
optional = true

[tool.poetry.group.emotion.dependencies]
numpy = ">=1.26.0"
tensorflow = ">=2.13.0"
tf-keras = "*"
deepface = ">=0.0.79"
mediapipe = ">=0.10.0"
opencv-python = ">=4.8.0.76"
pandas = ">=2.1.0"
matplotlib = ">=3.7.0"
scikit-learn = ">=1.3.0"  # Used by DeepFace

# Speech recognition dependencies (numpy >= 2.0.2)
[tool.poetry.group.speech]
optional = true

[tool.poetry.group.speech.dependencies]
numpy = ">=2.0.2"  # Required by newer speech libraries
torchaudio = ">=2.0.0"
speechbrain = ">=0.5.15" 
torch = ">=2.0.0"
librosa = ">=0.10.0"
soundfile = ">=0.12.1"
transformers = ">=4.33.0"
huggingface-hub = ">=0.17.0"
sentencepiece = ">=0.1.99"

# For SharePoint downloads
[tool.poetry.group.download]
optional = true

[tool.poetry.group.download.dependencies]
msal = ">=1.22.0"
selenium = ">=4.9.0"
webdriver-manager = ">=3.8.6"  # Added for automatic ChromeDriver management

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
