[tool.poetry]
name = "video-data-processing"
version = "0.1.0"
description = "Video processing toolkit for emotion recognition and speech analysis"
authors = ["Kenneth Dao - daotrongkhanh@u.nus.edu"]
readme = "README.md"
packages = [{include = "src"}]  # Specify the source directory

[tool.poetry.dependencies]
python = "~3.12"  # Specifically use Python 3.12.x
requests = ">=2.28.1"
typer = ">=0.9.0"
colorama = ">=0.4.6"
setuptools = ">=65.0.0"
wheel = ">=0.38.0"
gitpython = ">=3.1.30"  # For downloading models
tqdm = ">=4.66.0"       # For progress bars, used by multiple modules
psutil = ">=5.9.0"      # For system monitoring, memory usage tracking
numpy = "<2.0.0"        # Pin to NumPy 1.x for compatibility

# Group common dependencies without numpy conflicts
torch = ">=2.7.0"
[tool.poetry.group.common]
optional = true

[tool.poetry.group.common.dependencies]
moviepy = ">=1.0.3"
pydub = ">=0.25.1"
ffmpeg-python = ">=0.2.0"

# Emotion and pose recognition dependencies
[tool.poetry.group.emotion.dependencies]
numpy = "<2.0.0"        # Pin to NumPy 1.x for compatibility
tensorflow = ">=2.13.0"
tf-keras = "*"
deepface = ">=0.0.79"
mediapipe = ">=0.10.0"
opencv-python = ">=4.8.0.76"
pandas = ">=2.1.0"
matplotlib = ">=3.7.0"
scikit-learn = ">=1.3.0"  # Used by DeepFace
py-feat = ">=0.4.0"  # Python Facial Expression Analysis Toolbox

# Speech recognition dependencies
[tool.poetry.group.speech]
optional = true

[tool.poetry.group.speech.dependencies]
numpy = "<2.0.0"        # Pin to NumPy 1.x for compatibility
torchaudio = ">=2.0.0"
speechbrain = ">=0.5.15" 
torch = ">=2.0.0"
librosa = ">=0.10.0"
soundfile = ">=0.12.1"
transformers = ">=4.33.0"
huggingface-hub = ">=0.17.0"
sentencepiece = ">=0.1.99"
whisperx = ">=3.3.1"
opensmile = ">=2.4.0"  # Speech/Music features extraction

# For SharePoint downloads
[tool.poetry.group.download]
optional = true

[tool.poetry.group.download.dependencies]
msal = ">=1.22.0"
selenium = ">=4.9.0"
webdriver-manager = ">=3.8.6"  # Added for automatic ChromeDriver management

# Text processing dependencies
[tool.poetry.group.text]
optional = true

[tool.poetry.group.text.dependencies]
numpy = "<2.0.0"        # Pin to NumPy 1.x for compatibility
sentence-transformers = ">=2.2.2"  # Sentence-BERT
transformers = ">=4.33.0"  # For BERT variants (ALBERT, DeBERTA)
tensorflow-hub = ">=0.13.0"  # For Universal Sentence Encoder
pytorch-metric-learning = ">=1.5.0"  # For SimCSE

# Body pose and motion analysis
[tool.poetry.group.motion]
optional = true

[tool.poetry.group.motion.dependencies]
opencv-contrib-python = ">=4.8.0.76"  # Optical Flow
einops = ">=0.6.0"  # Used by many pose estimation models
timm = ">=0.6.12"  # Vision Transformer components

# Audio-visual and time processing
[tool.poetry.group.audiovisual]
optional = true

[tool.poetry.group.audiovisual.dependencies]
# All repositories moved to github_models directory

# Video processing utilities
[tool.poetry.group.video]
optional = true

[tool.poetry.group.video.dependencies]
# All repositories moved to github_models directory

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# GitHub model repositories are now managed by install_github_models.py
# Run the script with: poetry run python install_github_models.py
